--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/Mabenan/ServerManager#readme",
   "dependencies": {
+    "@types/os-utils": "0.0.1",
     "bcrypt": "^5.0.1",
     "express-resetter": "^1.1.0",
     "nodemon": "^2.0.12",
     "npm": "^7.20.6",
+    "os-utils": "0.0.14",
     "parse-dashboard": "^2.1.0",
     "parse-server": "^4.5.0",
     "pm2": "^5.1.0",
